Remove networking API permissions depdendency on behavior feature

Docs server does not handle API dependency on behavior features, so
having networkingPrivate and networking.onc depend on a behavior
feature to provide white list breaks docserver preview.py.
To avoid the issue, replicate whitelists in _permission_features file
for each of the permissions.

BUG=676105,672186

Review-Url: https://codereview.chromium.org/2592613003
Cr-Commit-Position: refs/heads/master@{#440164}

Former-commit-id: c1e3e116e8b8b3fd88eade4dae3521354ff8efd1